--- a/Projeto cordel/imagens/style.css
+++ b/Projeto cordel/imagens/style.css
@@ -43,10 +43,10 @@ header {
 }
 
 header > h1 {
-    padding top: 40px;
+    padding top: 50px;
     font-variant: small-caps;
     font-family: var(--font02);
-    font-size: 8vw;
+    font-size: 10vw;
     
     
     
@@ -76,12 +76,16 @@ section {
     padding-left: 29px;
     font-family: var(--font03);
     font-size: 3.5vw;
+    border: 20px;
+    border-radius: 10px;
 
 }
     
 section.normal {
-    background-color: white;
+    background-color: rgb(53, 219, 231);
     color: black;
+    display: block;
+    text-shadow: 1px 1px 1px black;
 
 
 }
@@ -99,7 +103,7 @@ section.imagem {
 
 section.imagem > p {
     background-color: rgba(26, 13, 204, 0.096);
-    display:inline-block;
+    display:inline block;
     padding: 2em;
     text-shadow: 1px 2px 0px black;
 }
@@ -123,11 +127,18 @@ section#img02 {
 
 }
 
+section#img03 {
+    background-image:url('paisagem.jpeg') ;
+    background-position: left center;
+    background-repeat: no-repeat;
+}
+
 footer {
-    background-color: black;
+    background-color: rgba(15, 14, 14, 0.815);
     color: white;
     text-align: center;
     padding: 12px;
+    border: 10px 10px 10px solid; 
 
 
 }
