--- a/Projeto cordel/imagens/style.css
+++ b/Projeto cordel/imagens/style.css
@@ -138,7 +138,7 @@ footer {
     color: white;
     text-align: center;
     padding: 12px;
-    border: 10px 10px 10px solid; 
+    border: 1px solid black; 
 
 
 }
